syntax = "proto3";

package clusterruntime.api.cluster;

import "internal/biz/cluster.proto";
import "internal/repository/clusterruntime/api/cluster/message.proto";

option go_package = "github.com/f-rambo/cloud-copilot/internal/repository/clusterruntime/api/cluster;";

service ClusterInterface {
      rpc CheckClusterInstalled(biz.cluster.Cluster) returns (clusterruntime.api.cluster.ClusterInstalled);

      rpc CurrentCluster(biz.cluster.Cluster) returns (biz.cluster.Cluster);

      rpc HandlerNodes(biz.cluster.Cluster) returns (biz.cluster.Cluster);
      
      rpc StartCluster(biz.cluster.Cluster) returns (biz.cluster.Cluster);
}